--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "repository": {
-    "type": "git",
+    "type": "module",
     "url": "git+https://github.com/MGWr6/Coder_Connect_Frontend.git"
   },
   "author": "",
